Added more details to the tools section of the build system blog post.

--- a/content/posts/2025-10-24.md
+++ b/content/posts/2025-10-24.md
@@ -1,5 +1,5 @@
 +++
-date = '2025-10-19'
+date = '2025-10-24'
 draft = false
 title = 'The Ultimate FPGA Project Structure and Build System'
 author = 'David Gussler'
@@ -35,12 +35,46 @@ First, I'll list out the goals that motivated this structure, set of tools, and 
 I've picked up lots of great, mainly open-source, build tools over the years to satisfy some the goals outlined above.
 
 - **[VHDL Style Guide](https://vhdl-style-guide.readthedocs.io/en/latest/)** For automated code style checking
+
+This is the only free tool I know of that does the job. Thankfully, its great! You just have to define a "rules.yaml" file listing out your custom code style rules and then pass that file, along with your vhdl files as input arguments to the `vsg` program. It can generate a structured report with all of the rule violations. It can not only *check* but also *automatically fix* most rule violations! This is great not only for your own code, but also in a situation where you're inheriting someone else's code and you want to quickly update the style / fix whitespace issues on hundreds or thousands of files with a single command.
+
 - **[VUnit](https://vunit.github.io/)** For simulator abstraction, simulation scripting, and a high-quality verification library
+
+I love VUnit's self-checking testbench verification library. It has BFMs for common components like wishbone, axi, axi stream, and UARTSs along with functions for logging failed data comparison checks. One of my other favorite VUnit features is how straightforward it makes testing different combinations of module generics. Imagine you have an async fifo module with generics for DATA_WIDTH and DEPTH. VUnit lets you define a test matrix for DATA_WIDTH = { 16, 32, 128 } and DEPTH = { 16, 1024 }, then VUnit will generate 6 testbench instantiations with all 6 possible combinations. Even better, it makes full use of modern processors with zillions of CPU cores by running all 6 of these simulations in parallel. Check out the simulation scripts in [sblib-open](https://github.com/shrikebyte/sblib-open) for some examples of matrix test generators.
+
 - **[HDL Registers](https://hdl-registers.com/index.html)** For VHDL register generation
-- **[GHDL](https://ghdl.github.io/ghdl/about.html)** For VHDL simulation
+
+There are lots of register generator tools out there. They solve one of the most common problems HDL developers face, so it makes sense that lots of different people have tackled the problem. Heck, I've even written my own custom janky register generator before and just about every company I've worked for has had their own proprietary (and *always* janky) variation of a register generator. This is probably one of the areas of HDL development with the highest amount of duplicated effort, so it was only natural that open-source would eventually fly in to save the day.
+
+HDL Registers is not the most popular register generator. That award probably goes to [System RDL](https://github.com/systemrdl). But after trying and comparing most of the well-known generators, I settled on HDL Registers because it is the fastest and simplest. Check out the [HDL Registers project philosophy](https://hdl-registers.com/rst/about/about.html) page for more details. The author, Lukas Vik, is great and very responsive to feedback! He's always added my feature requests in just a few days.
+
+- **[GHDL](https://ghdl.github.io/ghdl/about.html) or [NVC](https://github.com/nickg/nvc)** For VHDL simulation
+
+All I have to say is that both of these simulators are really great. Good enough for professional use, IMO. The main drawback is that they do not support mixed language simulation. For that you'll have to upgrade to one the paid simulators, like [Questasim](https://eda.sw.siemens.com/en-US/ic/questa-one/simulation/questa-one-sim/), [Xcelium](https://www.cadence.com/en_US/home/tools/system-design-and-verification/simulation-and-testbench-verification/xcelium-simulator.html), or [Rivieria](https://www.aldec.com/en/products/functional_verification/riviera-pro). These are too expensive for my one-man company, so I make due with the free simulators. I typically design my code hierarchies so that I never need to run mixed-language simulations and I also maintain my own VHDL libraries for basic building block components so that I don't have to rely on Xilinx IP (often written / encrypted in Verilog). Occasionally I really do need to run a mixed language simulation, so when those rare cases come up, I'll use the Xilinx xsim simulator. It is very slow, doesn't support some VHDL 08 features, and doesn't integrate with VUnit, so I try to avoid it when possible.
+
 - **[vhdl_ls](https://github.com/VHDL-LS/rust_hdl)** For a VHDL language server
+
+This has been one of the strongest productivity boosters I've ever had. A language server is a program used for code-completion, syntax checking, and go-to references in your text editor. I use it with the [VSCode extension](https://marketplace.visualstudio.com/items?itemName=hbohlin.vhdl-ls), but its a standalone program that can be integrated into any text editor that supports language servers. You create a file at the root of your repo called `vhdl_ls.toml` that defines the locations of all the VHDL files in your project and then the magic starts. It's context aware of your full project, so its smart enough to let you right-click on a entity instantiation and quickly jump to that entity's definition. It also alerts you when you've syntactically incorrect code along with supporting tab-complete for items that would usually take a long time to manually type. Want to instantiate an entity with 200 signals? You can just start typing the entity's name and vhdl_ls will give you a tab-completion option to fully instantiate the giant entity with one keystroke.
+
 - **[Vivado](https://www.amd.com/en/products/software/adaptive-socs-and-fpgas/vivado.html)** For synthesis and implementation
+
+Vivado is the AMD / Xilinx tool used to "compile" (synthesize / place / route) your set of sources into a binary that can be loaded onto a real FPGA. Other vendors have their own tools that do the same thing. Examples are [Altera Quartus](https://www.altera.com/products/development-tools/quartus), [Lattice Diamond](https://www.latticesemi.com/latticediamond), and [Microchip Libero](https://www.microchip.com/en-us/products/fpgas-and-plds/fpga-and-soc-design-tools/fpga/libero-ide)
+
+In my projects, I have two TCL scripts for Vivado. The first one generates a vivado project / adds the relevant sources and the second builds the bistream and reports. Both of these scripts are generalized to the project structure and expect a known-in-advance file structure, so both scripts work for almost all of my projects without having to be modified. Check out the `tools/proj.tcl` and `tools/build.tcl` scripts in the [template_fpga](https://github.com/shrikebyte/template_fpga) repo if you're interested in the inner-workings of these.
+
+One of the most common annoyances people seem to have with Vivado is managing block designs and Xilinx IPs an a clean way with source control. In my experience, by far the best way to handle these is to regenerate them from tcl scripts. You don't have to write these scripts yourself. Vivado will create them for you with the `write_bd_tcl` and `write_ip_tcl` tcl commands. Vivado also has a `write_project_tcl` command that will regenerate a full project for you, but I prefer maintaining my own project generation script because the one that gets generated by Vivado is usually a buggy mess that doesn't fit with the way that I like to organize things.
+
 - **[Github Actions](https://github.com/features/actions)** For CI scripting.
+
+I usually have two main actions rules. The first one gets triggered to run whenever a new versioned tag is created and pushed. This rule builds the FPGA bitfile, xsa, documentation, and other related output files, and creates a new [Github Release](https://docs.github.com/en/repositories/releasing-projects-on-github/about-releases), which archives the build artifacts as a "single source of truth" for an officially released build.Having long term storage of all your official builds, along with a linked tag for the specific commit that was used to build that release is incredibly important for the long term success and maintenance of a project. What happens when a customer asks for "that specific load from a few years ago because it had a weird bug that one of our other legacy systems actually relied on"? These things really do happen, so its important to keep an organized archive of all official build artifacts over time. The only downside about the actions build rule I use is that it has to run on a [self-hosted runner](https://docs.github.com/en/actions/concepts/runners/self-hosted-runners) because I don't think its really feasible to get Vivado to run on the free runners provided by Github. Not only are the Github runners not powerful enough, but they would also require that Vivado be reinstalled every time the runner is started up because they have no memory between runs. This would add a lot of additional time to each build and would also add significant to the actions script. I've seen it done before, often with [Docker](https://github.com/filmil/vivado-docker), but the added complexity is not worth the tradeoff to me. Vivado is such a behemoth of a tool that I think this is one of those cases where you're better off using a pre-configured environment for builds, rather than including the creation of the build environment as part of your build. So for this, I have a lab computer with an Intel i7-1470k, 96 GB of RAM, and a 4 TB NVMe drive set up to always be available on my network. Unfortunately, its a [security concern](https://docs.github.com/en/actions/reference/security/secure-use) to expose self-hosted runners on public repos, so I can't include the build action in the [template_fpga](https://github.com/shrikebyte/template_fpga) project.
+
+The other action that I usually include is one to run the simulations and check the code style for a project. This action gets run on EVERY commit to the main branch to help ensure that any new code does not break existing functionality or violate any style rules. Since my simulations and style checking uses all open-source tools, its quite straightforward to get these up and running using a free [Github-hosted](https://docs.github.com/en/actions/concepts/runners/github-hosted-runners) runner - no self-hosting required.
+
+One more tip I want to mention about these actions scripts is that I've learned that its usually better to keep these as lean as possible. Do as much of your scripting work in the actual repo, using bash scripts, python, Makefiles, whatever, and then make calls to these repos scripts from within the github actions script. This has three positive attributes.
+
+1. Makes migrating to a different git hosting service in the future easier because you've minimized the dependencies on Github.
+2. There is almost no difference between running a local build on the machine you're developing on from running a remote build on the Github Actions server. You'll want to option to running local builds. You don't want to be forced to connect to a remote server every time you need to run a build. What if the internet is down?
+3. Shorter actions scripts are easier to debug. Debugging Github actions scripts can be a real pain because they often require a push to the central repo to get triggered. This means your repository may end up with a list of commits like "testing actions script 1", "testing actions script 2", ... Shorter actions scripts are better.
 
 ## The Structure
 
@@ -49,6 +83,10 @@ Now that I've outlined all of the major goals of the project structure and liste
 Here is the output of `tree -L 3` from `template_fpga` root directory after cloning the project and running `make all`
 
 ```
+├── .github
+│   └── workflows
+│       ├── build.yaml
+│       └── test.yaml
 ├── build
 │   ├── regs_out
 │   │   ├── adder
@@ -135,6 +173,7 @@ Here is the output of `tree -L 3` from `template_fpga` root directory after clon
 
 Lets start at the top and work our way down:
 
+- `.github` Holds the [Github Actions](https://github.com/features/actions) scripts for building / simulating / testing.
 - `build` This is the only generated directory, meaning that cleaning up the build artifacts is as simple as running `rm -r build`.
   - `regs_out` holds all of the generated register interface code.
   - `sim_report.xml` is an easily parsable report with the last simulation run results.
