--- a/content/posts/2025-11-22.md
+++ b/content/posts/2025-11-22.md
@@ -47,7 +47,7 @@ entity stdver_axil is
 end entity;
 ```
 
-So its fairly straightforward. Its just provides an axi-lite access interface to the build-time settable values. As a small bonus, I also included a scratchpad register in `stdver_axil`, which can help with verifying register read/write access in a standardized way during initial board bring-up.
+So its fairly straightforward - the module just provides an axi-lite access interface to the build-time settable values. As a small bonus, I also included a scratchpad register in `stdver_axil`, which can help with verifying register read/write access in a standardized way during initial board bring-up.
 
 If you want to see an example design that includes `stdver_axil`, check out one of the top-level platforms from Shrikebyte's [template_fpga](https://github.com/shrikebyte/template_fpga/blob/main/platforms/basys3/hdl/chip.vhd) project.
 
