Updated Versioning article with an example python driver.

--- a/content/posts/2025-11-22.md
+++ b/content/posts/2025-11-22.md
@@ -275,6 +275,94 @@ if {[get_property STATUS [get_runs impl_1]] != "write_bitstream Complete!"} {
 
 For the full version of this script in the context of a real project, see Shrikebyte's [template_fpga](https://github.com/shrikebyte/template_fpga/blob/main/tools/build.tcl).
 
+Now that the build script has been run and we have a deliverable bitstream ready to load, the next step would be to access the version registers from software.
+
+## Software Access
+
+There isn't really a standardized way to do this, register-access software will be different from system to system. On a Zynq, you might access PL registers from the PS, but not always. You might access them from a Linux kernel driver or directly from Linux userspace or from a bare-metal no-os driver. You might access them from a host PC via PCIe or ethernet or UART or any other interface under the sun. Given the wide variety of potential access methods, I've provided a simple Stdver Python class for printing the version info. It gets initialized with external reg_rd and reg_wr functions, which would define how the FPGA's registers are accessed for the specific implementation, and is likely different from platform to platform.
+
+```Python
+class Stdver:
+    def __init__(self, baseaddr, reg_rd, reg_wr):
+        self.reg_rd = reg_rd
+        self.reg_wr = reg_wr
+        self.SCRATCHPAD_ADDR = baseaddr + 0x00
+        self.ID_ADDR         = baseaddr + 0x04
+        self.VERSION_ADDR    = baseaddr + 0x08
+        self.DATE_ADDR       = baseaddr + 0x0C
+        self.TIME_ADDR       = baseaddr + 0x10
+        self.GITHASH_ADDR    = baseaddr + 0x14
+
+    def get_scratchpad(self):
+        return self.reg_rd(self.SCRATCHPAD_ADDR)
+
+    def set_scratchpad(self, value):
+        self.reg_wr(self.SCRATCHPAD_ADDR, value)
+
+    def get_id(self):
+        return self.reg_rd(self.ID_ADDR)
+
+    def get_version(self):
+        raw = self.reg_rd(self.VERSION_ADDR)
+        return {
+            'patch':  raw & 0xFF,
+            'minor': (raw >> 8) & 0xFF,
+            'major': (raw >> 16) & 0xFF,
+            'dev':   (raw >> 29) & 0x1,
+            'local': (raw >> 30) & 0x1,
+            'dirty': (raw >> 31) & 0x1
+        }
+
+    def get_date(self):
+        raw = self.reg_rd(self.DATE_ADDR)
+        return {
+            'day':   raw & 0xFF,
+            'month': (raw >> 8) & 0xFF,
+            'year':  (raw >> 16) & 0xFFFF
+        }
+
+    def get_time(self):
+        raw = self.reg_rd(self.TIME_ADDR)
+        return {
+            'second': raw & 0xFF,
+            'minute': (raw >> 8) & 0xFF,
+            'hour':   (raw >> 16) & 0xFF
+        }
+
+    def get_githash(self):
+        return self.reg_rd(self.GITHASH_ADDR)
+
+    def print_summary(self):
+        version = self.get_version()
+        date = self.get_date()
+        time = self.get_time()
+
+        print("---==== FPGA Build Info ====---")
+        print("Device ID : 0x{:08X}".format(self.get_id()))
+        print("Version   : {}.{}.{}{}{}{}".format(
+            version['major'],
+            version['minor'],
+            version['patch'],
+            "-dev"   if version['dev'] else "",
+            "-local" if version['local'] else "",
+            "-dirty" if version['dirty'] else ""
+        ))
+        print("Build Date: {:04X}-{:02X}-{:02X}".format(date['year'], date['month'], date['day']))
+        print("Build Time: {:02X}:{:02X}:{:02X}".format(time['hour'], time['minute'], time['second']))
+        print("Git Hash  : 0x{:08X}".format(self.get_githash()))
+```
+
+Calling `print_summary()` prints a nice little visual summary of the build's properties:
+
+```
+---==== FPGA Build Info ====---
+Device ID : 0x00000017
+Version   : 1.0.4-dev-local
+Build Date: 2025-11-22
+Build Time: 10:38:16
+Git Hash  : 0x7e609f0c1
+```
+
 ## Conclusion
 
 That wraps up my strategy for keeping track of crucial version info in FPGA projects. Preparing to track this early on in the life of a new project is well worth the upfront investment, and after you get through the work of doing it the first time, it can easily be reused over and over again across projects.
