Updated Versioning article with an example python driver.

--- a/content/posts/2025-11-22.md
+++ b/content/posts/2025-11-22.md
@@ -279,7 +279,7 @@ Now that the build script has been run and we have a deliverable bitstream ready
 
 ## Software Access
 
-There isn't really a standardized way to do this, register-access software will be different from system to system. On a Zynq, you might access PL registers from the PS, but not always. You might access them from a Linux kernel driver or directly from Linux userspace or from a bare-metal no-os driver. You might access them from a host PC via PCIe or ethernet or UART or any other interface under the sun. Given the wide variety of potential access methods, I've provided a simple Stdver Python class for printing the version info. It gets initialized with external reg_rd and reg_wr functions, which would define how the FPGA's registers are accessed for the specific implementation, and is likely different from platform to platform.
+There isn't really a standardized way to handle this - register-access software will be different from system to system. On a Zynq, you might access PL registers from the PS, but not always. You might access them from a Linux kernel driver or directly from Linux userspace or from a bare-metal no-os driver. You might access them from a host PC via PCIe or ethernet or UART or any other interface under the sun. Given the wide variety of potential access methods, I've provided a simple Stdver Python class for printing the version info. It gets initialized with external reg_rd and reg_wr functions, which would define how the FPGA's registers are accessed for the specific implementation, and is likely different from platform to platform.
 
 ```Python
 class Stdver:
